Use unique usernames, resolve all data on state, style change, credits

--- a/app/features/create/create.component.html
+++ b/app/features/create/create.component.html
@@ -2,7 +2,7 @@
     <header></header>
     <a ng-bind="'Back'"
        ui-sref="home"
-       class="colour-babyBlue u-padding-20 u-fontGotham-Medium u-fontSize-14"
+       class="c-btn-transparentBlue u-padding-20 u-fontGotham-Medium u-fontSize-14"
        ng-style="{ 'text-decoration': 'none' }"
        ng-disabled="$ctrl.isLoading">
     </a>
