--- a/app/styles/_utilities.scss
+++ b/app/styles/_utilities.scss
@@ -146,4 +146,11 @@
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .26);
 }
 
+.u-border-radius-10 {
+    border-radius: 10px;
+}
+
+a {
+    color: white;
+}
 
