--- a/app/views/home.html
+++ b/app/views/home.html
@@ -3,11 +3,26 @@
     <div class="u-padding-20">
         <button ng-bind="'Create'"
                 ui-sref="create"
-                class="c-btn u-marginBottom-10 colour-babyBlue bg-colour-white">
+                class="c-btn c-btn-whiteBlue u-marginBottom-10">
         </button>
         <button ng-bind="'Join'"
                 ui-sref="join"
-                class="c-btn colour-white bg-colour-red">
+                class="c-btn c-btn-red">
         </button>
+    </div>
+    <div class="u-textCenter u-width-100 colour-white bg-colour-babyBlue u-padding-10-0 u-fontGotham-Medium">
+        <span ng-bind="'Application by Chuan Tran & Aaron Te'"></span>
+        </br>
+        <span ng-bind="'Game by Palm Court LLC.'"></span>
+        </br>
+        <a href="http://www.monikersgame.com/"
+           target="_blank"
+           ng-bind="'http://www.monikersgame.com/'">
+        </a>
+        </br>
+        <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"
+           target="_blank"
+           ng-bind="'License'">
+        </a>
     </div>
 </div>
